<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesLogin.login_email">

    <androidx.appcompat.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"

        >

        <TextView

            android:text="@string/txtLogin"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <ImageView

            android:layout_marginTop="15dp"
            android:src="@drawable/ico_work_24"
            android:layout_width="80dp"
            android:layout_height="80dp"


            />

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"

            >

            <EditText

                android:id="@+id/emailLogin"
                android:hint="@string/emailLogin"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true"

            >

            <EditText

                android:id="@+id/passwordLogin"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton

            android:id="@+id/botonLogin"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:text="@string/botonLogin"
            android:layout_width="180dp"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center"

            >

            <TextView

                android:text="@string/txtNoCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <TextView

                android:text="@string/registrar"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>